--- a/src/components/new-calendar/MonthTitle.module.css
+++ b/src/components/new-calendar/MonthTitle.module.css
@@ -8,4 +8,9 @@
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     color: #ffffff;
+    margin: 0 35px;
+}
+
+.nextBtn {
+    fill: #777777;
 }
