create functional on calendar

--- a/src/components/new-calendar/calendar-header/MonthTitle.module.css
+++ b/src/components/new-calendar/calendar-header/MonthTitle.module.css
@@ -5,6 +5,7 @@
 }
 
 .monthTitle {
+    text-transform: uppercase;
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     color: #ffffff;
