--- a/src/components/new-calendar/table/Cell.module.css
+++ b/src/components/new-calendar/table/Cell.module.css
@@ -14,6 +14,10 @@
     height: 63px;
 }
 
+.cell__sameDay {
+    background: #777777;
+}
+
 .cell__sticker {
     background: #50CAFF;
     width: 22px;
