create redux for calendar

--- a/src/components/new-calendar/calendar-header/MonthTitle.module.css
+++ b/src/components/new-calendar/calendar-header/MonthTitle.module.css
@@ -5,7 +5,7 @@
 }
 
 .monthTitle {
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     color: #ffffff;
