--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html {
+    background: #fff;
+}
+
+body {
+    margin: 0 auto;
     max-width: 1366px;
-    max-height: 768px;
+    min-height: 768px;
+    background: #EBE7FF;
 }
