--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  max-width: 190px;
+  min-width: 190px;
   min-height: 768px;
   background-color: #003B72;
 
