--- a/src/components/appointment-cards/Card.module.scss
+++ b/src/components/appointment-cards/Card.module.scss
@@ -1,4 +1,7 @@
 .card__container {
+  margin: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.25);
   position: relative;
   width: 475px;
   height: 174px;
