--- a/src/components/appointment-cards/Card.module.scss
+++ b/src/components/appointment-cards/Card.module.scss
@@ -1,5 +1,5 @@
 .card__container {
-  margin: 10px 20px;
+  margin: 15px 10px 5px 0px;
   border-radius: 5px;
   box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.25);
   position: relative;
