--- a/src/components/electron-card/ElectronCard.module.scss
+++ b/src/components/electron-card/ElectronCard.module.scss
@@ -6,7 +6,7 @@
   height: 183px;
   border-radius: 5px;
   padding: 2px;
-  margin: 15px;
+  margin: 15px 15px 0px 0px;
   background-color: #ffffff;
   transition: all 0.2s ease-in-out;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
