--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ select {
 
 .app {
     display: flex;
-    background-color: #EBE7FF;
+    background-color: #ffffff;
     margin: 0 auto;
     max-width: 1366px;
     min-height: 768px;
